# bandwidth-checker

./: .gitignore  CLAUDE.md  cleanup.py  config.py  discovery.py  pyproject.toml  run_test.py
collectors/: iperf.py  latency.py  tcp_stats.py
docs/: usage.md
docs/superpowers/plans/: 2026-03-18-bandwidth-checker.md  2026-03-19-auto-discovery.md
docs/superpowers/specs/: 2026-03-18-bandwidth-checker-design.md
phases/: step_up.py  sustained.py  throttled.py
report/: charts.py  generator.py
setup/: remote.py
tests/: test_charts.py  test_config.py  test_csv_persistence.py  test_depletion_analysis.py  test_depletion_detector.py  test_discovery.py  test_iperf_parser.py  test_iperf_runner.py  test_latency_parser.py  test_report_generator.py  test_step_up_logic.py  test_tcp_stats_parser.py
