[project]
name = "bandwidth-checker"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["collectors", "phases", "report", "setup", "tests"]
